# ansible-role-simple-compose

./: .mise.toml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml
molecule/default/templates/apache_example/: docker-compose.yml.j2
molecule/default/templates/nginx_example/: docker-compose.yaml.j2
tasks/: main.yml  setup_project.yml
vars/: main.yml
