[tool.poetry]
name = "ansible-role-simple-compose"
version = "0.1.0"
description = ""
authors = ["Tim Friedrich Brüggemann <oss@timfb.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ansible-dev-tools = "^24.10.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
ansible-lint = { version = "^25.0.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
