[project]
name = "ansible-role-simple-compose"
version = "0.1.0"
description = ""
authors = [{ name = "Tim Friedrich Brüggemann", email = "oss@timfb.dev" }]
requires-python = "~=3.13.7"
readme = "README.md"
dependencies = ["ansible>=12.0.0,<13"]

[dependency-groups]
dev = [
	"ansible-dev-tools>=25.0.0,<26",
	"molecule-plugins[docker]>=25.0.0,<26",
	"ansible-lint>=25.0.0,<26 ; platform_system != 'Windows'",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
